--- a/Application/Home/View/Public/main.html
+++ b/Application/Home/View/Public/main.html
@@ -8,7 +8,7 @@
         <div class="main-content">
             <div class="page-content">
 
-                Welcome    ,    <?php dump($_SESSION); ?>
+                Welcome    ,    {$_SESSION["user"]["username"]}
             </div>
 
         </div>
