--- a/Application/Home/View/Order/location.html
+++ b/Application/Home/View/Order/location.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Simple markers</title>
+    <title>实时位置</title>
     <style>
         html, body {
             height: 100%;
